--- a/generator.html
+++ b/generator.html
@@ -158,7 +158,7 @@
       <div class="cell top"></div>
       <div class="cell name"><span class="name" id="surveyName"> [variable] </span></div>
       <div class="cell type"><span class="type" id="surveyType"> [variable] </span></div>
-      <div class="cell blank">
+      <div class="cell blank"></div>
       <div class="cell sprite"><img class="cell" id="surveyImage"></img></div>
       <div class="cell cost"><span id="surveyCost"> # </span><span> Credits in Upkeep Cost </span></div>
       <div class="cell size"><p id="surveySize"> [Size] </p></div>
@@ -481,4 +481,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.128--->
+<!--Version 0.129--->
