--- a/generator.html
+++ b/generator.html
@@ -21,7 +21,7 @@
       
       .info-box { position:fixed; width: 190px; height: 300px; top:100px;left:1050px;font-family: 'MedievalSharp', cursive; 
         font-size:80%; border: 2px solid lightgray; border-radius: 5px; display: none; margin: 15px;
-        grid-template-columns: repeat(3, 1fr); grid-auto-rows: 2px 58px 60px 120px 50px 10px;
+        grid-template-columns: repeat(3, 1fr); grid-auto-rows: 2px 29px 29px 60px 120px 50px 10px;
         grid-template-areas:
           "top   top   top"
           "name  name  sprite"
@@ -481,4 +481,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.129--->
+<!--Version 0.130--->
