--- a/generator.html
+++ b/generator.html
@@ -156,7 +156,7 @@
     </div>
 
      <div class="info-box" id="info-box" onclick="hide(this)">
-      <div class="cell top">
+      <div class="cell top"></div>
       <div class="cell name"><span class="name" id="surveyName"> [variable] </span></div>
       <div class="cell type"><span class="type" id="surveyType"> [variable] </span></div>
       <div class="cell output"><span class="output" id="surveyOutput"> 2 Authority </span></div>
@@ -166,7 +166,7 @@
       <div class="cell habit"><p id="surveyHabit"> [% Habitability] </p></div>
       <div class="cell desc"><p id="surveyDesc"> [desc] </p></div>
       <div class="cell pop"><span> This planet contains </span><span id="surveyPop"> 0 </span><span> Population Units. </span></div>
-      <div class="cell bottom">
+      <div class="cell bottom"></div>
     </div>
     
     <img class="star" id="s1" src="orangestar1.png"></img>  
@@ -484,4 +484,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.133--->
+<!--Version 0.134--->
