--- a/generator.html
+++ b/generator.html
@@ -41,7 +41,7 @@
       .name span { font-size:140%; }
       .type { grid-area:type; text-align:center }
       .type span { font-size:140%; }
-      .output { grid-area:blank; text-align:center; }
+      .output { grid-area:output; text-align:center; }
       .output span { font-size:90%; }
       .sprite { grid-area:sprite; }
       .cost { grid-area: cost; text-align:center; }
