--- a/generator.html
+++ b/generator.html
@@ -19,7 +19,7 @@
       #p5 { }
       #p6 { }
       
-      .info-box { position:fixed; width: 190px; height: 302px; top:100px;left:1050px;font-family: 'MedievalSharp', cursive; 
+      .info-box { position:fixed; width: 190px; height: 301px; top:100px;left:1050px;font-family: 'MedievalSharp', cursive; 
         font-size:80%; border: 2px solid lightgray; border-radius: 5px; display: none; margin: 15px;
         grid-template-columns: repeat(3, 1fr); grid-auto-rows: 2px 40px 40px 60px 110px 40px 10px;
         grid-template-areas:
@@ -53,7 +53,7 @@
       .desc { grid-area: desc; text-align:center; font-size:90%; }
       .pop { grid-area: pop; text-align:center; }
       .pop span { font-size:110% }
-      .top { grid-area:top; }
+      .top { grid-area:top; display:none; }
       .bottom { grid-area:bottom; display:none; }
       #surveyImage { background:grey; border-radius:50%; padding:0.2px; margin-top:2px; margin-bottom:2px; margin-left:10px; margin-right:10px; }
       
