--- a/generator.html
+++ b/generator.html
@@ -54,7 +54,7 @@
       .pop { grid-area: pop; text-align:center; }
       .pop span { font-size:110% }
       .top { grid-area:top; display:none; }
-      .bottom { grid-area:bottom; display:none; }
+      .bottom { grid-area:bottom; }
       #surveyImage { background:grey; border-radius:50%; padding:0.2px; margin-top:2px; margin-bottom:2px; margin-left:10px; margin-right:10px; }
       
       .HUD { position:fixed; top:0px; left:0px; height:50px; width:100%; background:#7096cf; border:2px solid lightgray;
