--- a/generator.html
+++ b/generator.html
@@ -429,7 +429,7 @@
           var nameList = ["John 1", "John 2", "John 3", "John 4", "John 5"];
           var randomIndex = Math.floor(Math.random() * nameList.length);
           var planetName = nameList[randomIndex];
-          pEl.randomName = planetName[0];
+          pEl.randomName = planetName;
         }
       }
       function generatePosition() {
@@ -493,4 +493,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.141--->
+<!--Version 0.142--->
