--- a/generator.html
+++ b/generator.html
@@ -426,7 +426,7 @@
           pEl.style.width = sizeNumber * 2 + 40 + "px";
         }
         for (const pEl of planetElList) {
-          var nameList = ["John 1", "John 2", "John 3", "John 4", "John 5"];
+          var nameList = ["Riak", "Quevec", "Tolorae", "Cassentor", "Vlaron", "Tholia Prime", "Karsaec"];
           var randomIndex = Math.floor(Math.random() * nameList.length);
           var planetName = nameList[randomIndex];
           pEl.randomName = planetName;
