--- a/generator.html
+++ b/generator.html
@@ -426,7 +426,7 @@
           pEl.style.width = sizeNumber * 2 + 40 + "px";
         }
         for (const pEl of planetElList) {
-          var nameList = ["Riak", "Quevec", "Tolorae", "Cassentor", "Vlaron", "Tholia Prime", "Karsaec"];
+          var nameList = ["Riak", "Quevec", "Tolorae", "Cassentor Alpha", "Cassentor Beta", "Cassentor Gamma", "Vlaron", "Tholia Prime", "Karsaec"];
           var randomIndex = Math.floor(Math.random() * nameList.length);
           var planetName = nameList[randomIndex];
           pEl.randomName = planetName;
@@ -493,4 +493,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.144--->
+<!--Version 0.145--->
