--- a/generator.html
+++ b/generator.html
@@ -413,7 +413,7 @@
         system.appendChild(newMarker);
         newMarker.style.display = "block";
         var button = $("menuButtonJunkPlanet");
-        button.setAttribute("disabled");
+        button.setAttribute("disabled", "");
         alert ("Reminder - add in disabling only one out of all junk planets")
       }
       //system generation
@@ -530,4 +530,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.147--->
+<!--Version 0.148--->
