--- a/generator.html
+++ b/generator.html
@@ -259,7 +259,7 @@
         if (uninhabitablePlanets.includes(el.biome)) {
           button3.setAttribute("disabled", "");
         }
-        else if (unmineablePlanets.includes(el.biome)) {
+        if (unmineablePlanets.includes(el.biome)) {
           button2.setAttribute("disabled", "");
         }
       }
@@ -507,4 +507,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.151--->
+<!--Version 0.152--->
