--- a/generator.html
+++ b/generator.html
@@ -281,6 +281,8 @@
         var button3 = $("menuButton3");
         button2.removeAttribute("disabled");
         button3.removeAttribute("disabled");
+        button2.style.backgroundColor = "navy";
+        button3.style.backgroundColor = "navy";
       }
       
       function survey() {
