--- a/generator.html
+++ b/generator.html
@@ -497,6 +497,7 @@
       //Instant Functions
       generateStats();
       generatePosition();
+      generateStarImg();
     </script>
   </body>
 </html>
