--- a/generator.html
+++ b/generator.html
@@ -320,17 +320,17 @@
           system.appendChild(newMarker);
           newMarker.style.display = "block";
         }
-        if (el.biome == "junk") {
+        else if (el.biome == "junk") {
           var newMineralNumber = Number(HUDMineralNumber.innerText) + 60;
           HUDMineralNumber.innerText = newMineralNumber;
           var newCreditNumber = Number(HUDCreditNumber.innerText) + 20;
           HUDCreditNumber.innerText = newCreditNumber;
-          alert("This system is not suitable for mining. However, it is rich in materials, and instead you can salvage them(+60 Minerals, +20 Credits).");
+          alert("This system is not suitable for mining. However, it is rich in materials, and instead you can salvage them (+60 Minerals, +20 Credits).");
         }
         else if (el.biome == "gas") {
           var newSupplyNumber = Number(HUDSupplyNumber.innerText) + 70;
           HUDSupplyNumber.innerText = newSupplyNumber;
-          alert("This system is not suitable for mining. However, it is rich in supplies, and instead of building a mining station you can salvage them.");
+          alert("This system is not suitable for mining. However, it is rich in supplies, and you can salvage them (+70 Supplies).");
         }
         else {
           alert("You can't build a Mining Station here. This planet is not suitable for mining.")
