--- a/generator.html
+++ b/generator.html
@@ -440,7 +440,7 @@
         }
         for (const pEl of planetElList) {
           var nameList = ["Riak", "Quevec", "Tolorae", "Cassentor Alpha", "Cassentor Beta", "Cassentor Gamma", "Vlaron", "Tholia Prime", "Karsaec", "Sacradia",
-                          "Eclysia Alpha", "Eclysia Prime"];
+                          "Eclysia Alpha", "Eclysia Prime", "Trilliad", "Celium", "Piaryus", "Mazirus"];
           var randomIndex = Math.floor(Math.random() * nameList.length);
           var planetName = nameList[randomIndex];
           pEl.randomName = planetName;
