--- a/generator.html
+++ b/generator.html
@@ -160,7 +160,7 @@
       <div class="cell name"><span class="name" id="surveyName"> [variable] </span></div>
       <div class="cell sprite"><img class="cell" id="surveyImage"></img></div>
       <div class="cell type"><span class="type" id="surveyType"> [variable] </span></div>
-      <div class="cell output"><span class="output" id="surveyOutput"> 0 </span><span> Authority </span></div>
+      <div class="cell output"><span class="output" id="surveyOutput"> 0 </span><span> Authority per Turn </span></div>
       <div class="cell cost"><span id="surveyCost"> # </span><span> Credits in Upkeep Cost </span></div>
       <div class="cell size"><p id="surveySize"> [Size] </p></div>
       <div class="cell habit"><p id="surveyHabit"> [% Habitability] </p></div>
@@ -440,7 +440,7 @@
         }
         for (const pEl of planetElList) {
           var nameList = ["Riak", "Quevec", "Tolorae", "Cassentor Alpha", "Cassentor Beta", "Cassentor Gamma", "Vlaron", "Tholia Prime", "Karsaec", "Sacradia",
-                          "Eclysia Alpha", "Eclysia Prime", "Trilliad", "Celium", "Piaryus", "Mazirus"];
+                          "Eclysia Alpha", "Eclysia Prime", "Trilliad", "Celium", "Piaryus", "Mazirus", "Kwevec"];
           var randomIndex = Math.floor(Math.random() * nameList.length);
           var planetName = nameList[randomIndex];
           pEl.randomName = planetName;
