--- a/generator.html
+++ b/generator.html
@@ -152,7 +152,7 @@
       <div class="HUDcell HUDbottom"></div>
     </div>
     
-    <button id="turnButton" onclick="nextTurn"> Next Turn </button>
+    <button id="turnButton" onclick="nextTurn()"> Next Turn </button>
 
     <div class="iconCloner">
       <img class="colonyMarker" id="passiveColonyMarker" src="passivecolony.png" onclick="surveyColony(this)"></img>
