--- a/generator.html
+++ b/generator.html
@@ -510,13 +510,13 @@
         if (HUDMineralNumber.innerText <= 0) {
          alert("you ran out of Minerals");
         }
-        else if (HUDCreditNumber.innerText <= 0) {
+        if (HUDCreditNumber.innerText <= 0) {
           alert("you ran out of Credits");
         }
-        else if (HUDAuthorityNumber.innerText <= 0) {
+        if (HUDAuthorityNumber.innerText <= 0) {
           alert("you ran out of Authority, you can no longer control your government");
         }
-        else if (HUDSupplyNumber.innerText <= 0) {
+        if (HUDSupplyNumber.innerText <= 0) {
           alert("you ran out of Supplies, your colonies are starving");
         }
         alert("nextTurn initated");
@@ -528,4 +528,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.160--->
+<!--Version 0.162--->
