--- a/generator.html
+++ b/generator.html
@@ -523,8 +523,8 @@
         alert("nextTurn initated");
         var allColonies = $$('#system1 .planet .colony');
         for (const pEl of allColonies) {
-          var newPopNumber = pEl.surveyPop + 1;
-          pEl.surveyPop = newPopNumber;
+          var newPopNumber = pEl.population + 1;
+          pEl.population = newPopNumber;
         }
       }
       //Instant Functions
@@ -534,4 +534,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.163--->
+<!--Version 0.165--->
