--- a/generator.html
+++ b/generator.html
@@ -522,7 +522,7 @@
         }
         alert("nextTurn initated");
         var allColonies = $$('#system1 .planet .colony');
-        for (const pEl of allColonies) {
+        for (var pEl of allColonies) {
           var newPopNumber = pEl.population + 1;
           pEl.population = newPopNumber;
         }
