--- a/generator.html
+++ b/generator.html
@@ -454,7 +454,8 @@
         }
         for (const pEl of planetElList) {
           var nameList = ["Riak", "Quevec", "Tolorae", "Cassentor Alpha", "Cassentor Beta", "Cassentor Gamma", "Vlaron", "Tholia Prime", "Karsaec", "Sacradia",
-                          "Eclysia Alpha", "Eclysia Prime", "Trilliad", "Celium", "Piaryus", "Mazirus", "Kwevec"];
+                          "Eclysia Alpha", "Eclysia Prime", "Trilliad", "Celium", "Piaryus", "Mazirus", "Kwevec", "D'Arthen", "Epsilon Ras", "Sherocira",
+                          "Mardilon", "Tofarian Prime", "Scieor", "Dessanu", "Zaydran", "Irsa", "Rihlac", "Saer'esr"];
           var randomIndex = Math.floor(Math.random() * nameList.length);
           var planetName = nameList[randomIndex];
           pEl.randomName = planetName;
@@ -547,4 +548,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.168--->
+<!--Version 0.170--->
